docs: Add Home Assistant, Modify the title leave, Add directory

--- a/docs/life/2024.md
+++ b/docs/life/2024.md
@@ -3,19 +3,32 @@ title: 2024 年度总结
 author: Lee
 ---
 
-### 活跃组织
+## 活跃组织
 
 - [Project Trans](https://github.com/project-trans) : Project Trans (formerly known as MtF.wiki) aims to better maintain multiple projects including MtF wiki, FtM wiki and more.
 - [Trans Archive!](https://github.com/trans-archive) : 一个多元性别相关内容档案库。
 
-### PR 贡献
+## 开发应用
+
+[Display-Preview-URL-in-PR](https://github.com/Leetfs/Display-Preview-URL-in-PR)
+
+在 PR 内 自动发送和更新预览链接的 bot
+
+## PR 贡献
 
 第一次在 GitHub 上进行**代码类**贡献
 
 - 更新搜索框翻译，添加 ARIA 标签 [#406](https://github.com/project-trans/RLE-wiki/pull/406)
 
-其它代码类贡献
+## PR 汇总
 
+以下列表仅统计代码类 PR, 按仓库分组，按时间排序。
+
+### [RLE-wiki](https://github.com/project-trans/RLE-wiki)
+
+一份给跨性别者与性别多元群体的 RLE 指南。
+
+1. 更新搜索框翻译，添加 ARIA 标签 [#406](https://github.com/project-trans/RLE-wiki/pull/406)
 1. refactor: 更新AppFooter.vue组件 [#408](https://github.com/project-trans/RLE-wiki/pull/408)
 1. refactor: 优化部署文档工作流 [#410](https://github.com/project-trans/RLE-wiki/pull/410)
 1. 新增字数和预计阅读时间、文档两端对齐，优化作者信息显示逻辑 [#411](https://github.com/project-trans/RLE-wiki/pull/411)
@@ -23,45 +36,98 @@ author: Lee
 1. 重构 ReadingTime.vue 和 config.ts 以获取更准确的文档字数 [#414](https://github.com/project-trans/RLE-wiki/pull/414)
 1. 修复历史记录显示错误 [#425](https://github.com/project-trans/RLE-wiki/pull/425)
 1. 添加部署 PR 到 Cloudflare Pages 的工作流 [#428](https://github.com/project-trans/RLE-wiki/pull/428)
-1. feat: 添加发布到 NPM 的工作流 [#1](https://github.com/project-trans/vitepress-theme-project-trans/pull/1)
 1. 修复 frontmatter 数据没有在页面切换时正确更新的 bug [#431](https://github.com/project-trans/RLE-wiki/pull/431)
 1. refactor: 更新主题包并部署到 Cloudflare Pages [#432](https://github.com/project-trans/RLE-wiki/pull/432)
 1. 添加了 draft 时不部署和使用 path 进行选择性部署 [#433](https://github.com/project-trans/RLE-wiki/pull/433)
 1. 更新部署指南和构建流程 [#435](https://github.com/project-trans/RLE-wiki/pull/435)
-1. 添加部署 PR 到 Cloudflare Pages 的工作流 [#1125](https://github.com/project-trans/MtF-wiki/pull/1125)
 1. refactor: 更新 RLE.wiki 主题配置 [#436](https://github.com/project-trans/RLE-wiki/pull/436)
 1. refactor(config): update RLE.wiki theme configuration [#438](https://github.com/project-trans/RLE-wiki/pull/438)
 1. fix: 修复 GitHub 编辑链接 [#439](https://github.com/project-trans/RLE-wiki/pull/439)
-1. fix: 修复 GitHub 编辑链接 [#18](https://github.com/project-trans/SOC-8/pull/18)
 1. fix(config): 修复 sitePattern 的路径错误 [#440](https://github.com/project-trans/RLE-wiki/pull/440)
-1. Update baseURL in config.toml [#1134](https://github.com/project-trans/MtF-wiki/pull/1134)
-1. fix(components/Form.jsx): Change button type to 'submit' for proper form submission [#421](https://github.com/squarestack/github-invite/pull/421)
-1. ci: 优化评论逻辑，移除没用的 /zh-cn/ 后缀，修改 baseURL [#1146](https://github.com/project-trans/MtF-wiki/pull/1146)
 1. ci: 优化评论逻辑 [#448](https://github.com/project-trans/RLE-wiki/pull/448)
-1. ci: 优化ci [#1151]()
 1. (.editorconfig)/ci: 调整格式规则，优化ci [#450](https://github.com/project-trans/RLE-wiki/pull/450)
 1. ci: 确保草稿下的 PR 也能预览 [#452](https://github.com/project-trans/RLE-wiki/pull/452)
+1. ci: Add preview pageUrls [#493](https://github.com/project-trans/RLE-wiki/pull/493)
+1. ci: Add Install Wrangler [#498](https://github.com/project-trans/RLE-wiki/pull/498)
+
+### [MtF-wiki](https://github.com/project-trans/MtF-wiki)
+
+一个或许可以给部分跨性别女性与非常规性别群体提供帮助的地方。
+
+1. 添加部署 PR 到 Cloudflare Pages 的工作流 [#1125](https://github.com/project-trans/MtF-wiki/pull/1125)
+1. Update baseURL in config.toml [#1134](https://github.com/project-trans/MtF-wiki/pull/1134)
+1. ci: 优化评论逻辑，移除没用的 /zh-cn/ 后缀，修改 baseURL [#1146](https://github.com/project-trans/MtF-wiki/pull/1146)
+1. ci: 优化ci [#1151](https://github.com/project-trans/MtF-wiki/pull/1151)
+1. fix: 修复构建错误 [#1188](https://github.com/project-trans/MtF-wiki/pull/1188)
+1. ci: 改为使用 GitHub 构建 [#1201](https://github.com/project-trans/MtF-wiki/pull/1201)
+1. ci: 修复触发条件 [#1209](https://github.com/project-trans/MtF-wiki/pull/1209)
+1. ci: 改用 wrangler-action@v3 [#1223](https://github.com/project-trans/MtF-wiki/pull/1223)
+1. ci: Add preview pageUrls [#1253](https://github.com/project-trans/MtF-wiki/pull/1253)
+
+### [vitepress-theme-project-trans](https://github.com/project-trans/vitepress-theme-project-trans)
+
+这是一个由 Project Trans 开发的 VitePress 主题。
+
+1. feat: 添加发布到 NPM 的工作流 [#1](https://github.com/project-trans/vitepress-theme-project-trans/pull/1)
 1. feat: 添加自定义版权区内组织名的功能 [#7](https://github.com/project-trans/vitepress-theme-project-trans/pull/7)
 1. fix(CopyrightInfo): 修复显示bug [#8](https://github.com/project-trans/vitepress-theme-project-trans/pull/8)
-1. fix: 修复构建失败 [#21](https://github.com/project-trans/blog/pull/21)
 1. feat(nav): 添加导航栏切换字体功能 [#9](https://github.com/project-trans/vitepress-theme-project-trans/pull/9)
 1. fix: 修复字体错误 [#10](https://github.com/project-trans/vitepress-theme-project-trans/pull/10)
 1. style: 更改字体效果，格式化 fontSwitcher.js [#11](https://github.com/project-trans/vitepress-theme-project-trans/pull/11)
 1. feat: 支持自定义文档属性栏 [#12](https://github.com/project-trans/vitepress-theme-project-trans/pull/12)
-1. fix: 修复构建失败 [#27](https://github.com/project-trans/2345.LGBT/pull/27)
-1. fix: 修复构建错误 [#19](https://github.com/project-trans/hugo-theme-zdoc/pull/19)
-1. fix: 修复构建错误 [#1188](https://github.com/project-trans/MtF-wiki/pull/1188)
-1. feat: 添加 css [#1](https://github.com/Transzh-Program/aboutTrans/pull/1)
-1. ci: 改为使用 GitHub 构建 [#1201](https://github.com/project-trans/MtF-wiki/pull/1201)
-1. ci: 修复触发条件 [#1209](https://github.com/project-trans/MtF-wiki/pull/1209)
-1. ci: 改用 wrangler-action@v3 [#1223](https://github.com/project-trans/MtF-wiki/pull/1223)
-1. ci: Add preview pageUrls [#1](https://github.com/project-trans/pr-preview-action/pull/1)
-1. ci: Add preview pageUrls [#1253](https://github.com/project-trans/MtF-wiki/pull/1253)
-1. ci: Add preview pageUrls [#493](https://github.com/project-trans/RLE-wiki/pull/493)
 
-### issues
+### [SOC-8](https://github.com/project-trans/SOC-8/)
+
+跨性别和多元性别人群健康照护指南（第8版）
+
+1. fix: 修复 GitHub 编辑链接 [#18](https://github.com/project-trans/SOC-8/pull/18)
+
+### [github-invite](https://github.com/squarestack/github-invite)
+
+Join our Github organization in a few clicks
+
+1. fix(components/Form.jsx): Change button type to 'submit' for proper form submission [#421](https://github.com/squarestack/github-invite/pull/421)
+
+### [blog](https://github.com/project-trans/blog/)
+
+Project Trans Blog
+
+1. fix: 修复构建失败 [#21](https://github.com/project-trans/blog/pull/21)
+
+### [2345.LGBT](https://github.com/project-trans/2345.LGBT)
+
+Transgender Navigation (2345.LGBT)
+
+1. fix: 修复构建失败 [#27](https://github.com/project-trans/2345.LGBT/pull/27)
+
+### [hugo-theme-zdoc](https://github.com/project-trans/hugo-theme-zdoc)
+
+Project Trans forked hugo theme zdoc
+
+1. fix: 修复构建错误 [#19](https://github.com/project-trans/hugo-theme-zdoc/pull/19)
+
+### [aboutTrans](https://github.com/Transzh-Program/aboutTrans)
+
+跨性别相关知识科普站
+
+1. feat: 添加 css [#1](https://github.com/Transzh-Program/aboutTrans/pull/1)
+
+### [pr-preview-action](https://github.com/project-trans/pr-preview-action)
+
+自动在 PR 评论区生成预览链接的 bot
+
+1. ci: Add preview pageUrls [#1](https://github.com/project-trans/pr-preview-action/pull/1)
+
+### [wrangler-action](https://github.com/cloudflare/wrangler-action)
+
+easily deploy cloudflare workers applications using wrangler and github actions
+
+1. Fix installing Wrangler using pnpm [#339](https://github.com/cloudflare/wrangler-action/pull/339)
+
+## issues
 
 1. 修复切换文档后字数 +4 的 bug [#412](https://github.com/project-trans/RLE-wiki/issues/412)
 1. 添加通过 frontmatter 中的 order 字段 控制文档排序的功能 [#2](https://github.com/project-trans/vitepress-theme-project-trans/issues/2)
 1. bug: Some articles can't be crawled [#53](https://github.com/jooooock/wechat-article-exporter/issues/53)
 1. ios下切换到宋体不可用 [#13](https://github.com/project-trans/vitepress-theme-project-trans/issues/13)
+1. Wrangler installation fails using pnpm 9.13.2 [#338](https://github.com/cloudflare/wrangler-action/issues/338)
