docs(2024): Add GitHelper

--- a/docs/life/2024.md
+++ b/docs/life/2024.md
@@ -10,9 +10,13 @@ author: Lee
 
 ## 开发应用
 
-[Display-Preview-URL-in-PR](https://github.com/Leetfs/Display-Preview-URL-in-PR)
+### [Display-Preview-URL-in-PR](https://github.com/Leetfs/Display-Preview-URL-in-PR)
 
 在 PR 内 自动发送和更新预览链接的 bot
+
+### [GitHelper](https://github.com/Leetfs/GitHelper)
+
+One-click Git setup for username and email.
 
 ## PR 贡献
 
