docs(2024): Update 2024 Annual Summary

--- a/docs/life/2024.md
+++ b/docs/life/2024.md
@@ -7,6 +7,7 @@ author: Lee
 
 - [Project Trans](https://github.com/project-trans) : Project Trans (formerly known as MtF.wiki) aims to better maintain multiple projects including MtF wiki, FtM wiki and more.
 - [Trans Archive!](https://github.com/trans-archive) : 一个多元性别相关内容档案库。
+- [transzh](https://github.com/transzh-org) : 中文跨性别维基
 
 ## 开发应用
 
@@ -122,16 +123,9 @@ Project Trans forked hugo theme zdoc
 
 1. ci: Add preview pageUrls [#1](https://github.com/project-trans/pr-preview-action/pull/1)
 
-### [wrangler-action](https://github.com/cloudflare/wrangler-action)
-
-easily deploy cloudflare workers applications using wrangler and github actions
-
-1. Fix installing Wrangler using pnpm [#339](https://github.com/cloudflare/wrangler-action/pull/339)
-
 ## issues
 
 1. 修复切换文档后字数 +4 的 bug [#412](https://github.com/project-trans/RLE-wiki/issues/412)
 1. 添加通过 frontmatter 中的 order 字段 控制文档排序的功能 [#2](https://github.com/project-trans/vitepress-theme-project-trans/issues/2)
 1. bug: Some articles can't be crawled [#53](https://github.com/jooooock/wechat-article-exporter/issues/53)
 1. ios下切换到宋体不可用 [#13](https://github.com/project-trans/vitepress-theme-project-trans/issues/13)
-1. Wrangler installation fails using pnpm 9.13.2 [#338](https://github.com/cloudflare/wrangler-action/issues/338)
