--- a/docs/life/2024.md
+++ b/docs/life/2024.md
@@ -7,7 +7,7 @@ author: Lee
 
 - [Project Trans](https://github.com/project-trans) : Project Trans (formerly known as MtF.wiki) aims to better maintain multiple projects including MtF wiki, FtM wiki and more.
 - [Trans Archive!](https://github.com/trans-archive) : 一个多元性别相关内容档案库。
-- [transzh](https://github.com/transzh-org) : 中文跨性别维基
+- [Transzh](https://github.com/transzh-org) : 中文跨性别维基
 
 ## 开发应用
 
