docs(life): Update Summarize

--- a/docs/life/2024.md
+++ b/docs/life/2024.md
@@ -11,7 +11,7 @@ author: Lee
 
 ## 开发应用
 
-### [Display-Preview-URL-in-PR](https://github.com/Leetfs/Display-Preview-URL-in-PR)
+### [pr-preview-action](https://github.com/project-trans/pr-preview-action)
 
 在 PR 内 自动发送和更新预览链接的 bot
 
