--- a/docs/life/2024.md
+++ b/docs/life/2024.md
@@ -5,7 +5,7 @@ author: Lee
 
 ## 活跃组织
 
-- [Project Trans](https://github.com/project-trans) : Project Trans (formerly known as MtF.wiki) aims to better maintain multiple projects including MtF wiki, FtM wiki and more.
+- [Project Trans](https://github.com/project-trans) : Project Trans 致力创建自由开放且持续更新的跨性别知识资讯平台。我们认为每个人在性倾向、性别身份、性别表达等方面享有平等的选择权，不受污名、歧视和暴力。
 - [Trans Archive!](https://github.com/trans-archive) : 一个多元性别相关内容档案库。
 - [Transzh](https://github.com/transzh-org) : 中文跨性别维基
 
