New Crowdin updates (#48)
* New translations gpr.md (Japanese)

* New translations git.md (English)

* New translations git.md (Japanese)

* Update source file git.md

* New translations git.md (English)

* New translations git.md (Japanese)

* New translations resume.md (Japanese)

* New translations resume.md (English)

* Update source file resume.md

* New translations resume.md (Japanese)

* New translations resume.md (English)

* Update source file index.md

* Update source file resume.md

* New translations index.md (English)

* New translations index.md (Japanese)

* New translations resume.md (Japanese)

* New translations resume.md (English)

* Update source file resume.md

* New translations resume.md (Japanese)

* New translations resume.md (English)

* New translations 2024.md (English)

* New translations 2024.md (Japanese)

* New translations 2025.md (Japanese)

* New translations 2025.md (English)

* Update source file 2024.md

* Update source file 2025.md

* New translations 2024.md (English)

* New translations 2024.md (Japanese)

* Update source file 2024.md

* New translations 2024.md (English)

* New translations 2024.md (Japanese)

* New translations resume.md (Japanese)

* New translations resume.md (English)

* New translations 2025.md (Japanese)

* New translations 2025.md (English)

--- a/docs/en/life/2024.md
+++ b/docs/en/life/2024.md
@@ -5,13 +5,13 @@ author: Lee
 
 ## Active Organizations
 
-- [Project Trans](https://github.com/project-trans) : Project Trans (formerly known as MtF.wiki) aims to better maintain multiple projects including the MtF wiki, FtM wiki, and more.
+- [Project Trans](https://github.com/project-trans) : Project Trans is dedicated to creating a free, open, and continuously updated platform for transgender knowledge and information.We believe that everyone has the equal right to choose in terms of sexual orientation, gender identity, gender expression, etc., free from stigma, discrimination, and violence.
 - [Trans Archive!](https://github.com/trans-archive) : A content archive related to gender diversity.
 - [Transzh](https://github.com/transzh-org) : Chinese-language transgender wiki
 
 ## Developed Applications
 
-### [Display-Preview-URL-in-PR](https://github.com/Leetfs/Display-Preview-URL-in-PR)
+### [pr-preview-action](https://github.com/project-trans/pr-preview-action)
 
 A bot that automatically sends and updates preview links within PRs
 
