--- a/docs/ja/life/2024.md
+++ b/docs/ja/life/2024.md
@@ -5,13 +5,13 @@ author: Lee
 
 ## アクティブな組織
 
-- [Project Trans](https://github.com/project-trans)：Project Trans（旧称 MtF.wiki）は、MtF wiki、FtM wiki など複数のプロジェクトをより良く管理することを目指しています。
+- [プロジェクトTrans](https://github.com/project-trans) : プロジェクトTransは、自由でオープンかつ継続的に更新されるトランスジェンダーに関する知識と情報のプラットフォームの作成に尽力しています。私たちは、性的指向、性同一性、性表現などにおいて、すべての人が平等な選択権を持ち、汚名、差別、暴力を受けないことを信じています。
 - [Trans Archive!](https://github.com/trans-archive)：多様なジェンダーに関するアーカイブです。
 - [Transzh](https://github.com/transzh-org)：中国語のトランスジェンダーWiki
 
 ## アプリ開発
 
-### [Display-Preview-URL-in-PR](https://github.com/Leetfs/Display-Preview-URL-in-PR)
+### [pr-preview-action](https://github.com/project-trans/pr-preview-action)
 
 PR内で自動的にプレビューリンクを送信・更新するボット
 
