docs(vrchat): Add two VRChat images to the document

--- a/docs/life/vrchat/61.md
+++ b/docs/life/vrchat/61.md
@@ -6,3 +6,5 @@ author: Lee
 ## 20250601
 
 ![](/life/vrchat/image/VRChat_2025-06-01_22-46-37.288_2048x1440.png)
+![](/life/vrchat/image/VRChat_2025-06-01_23-32-46.419_2048x1440.png)
+![](/life/vrchat/image/VRChat_2025-06-01_23-34-08.844_2048x1440.png)
