docs: update pr info

--- a/docs/life/annual-summary/2025.md
+++ b/docs/life/annual-summary/2025.md
@@ -42,3 +42,4 @@ _中国科学院软件研究所_ | 2025.02 - 2025.05
 1. 更新 GitHub Actions 工作流以部署 VitePress 站点到 Cloudflare Pages [c572404](https://github.com/ChisakaKanako/aboutTrans/commit/c572404600ff6747dfa47c1f683d57023f05f670)
 1. feat: 增加对 vitepress i18n 的支持 [022a2c2](https://github.com/project-trans/vitepress-theme-project-trans/commit/022a2c20d69c9d6c8604f437cef872dc7240849b)
 1. fix: 将 SiteTitle 属性设为可选 [783ca6e](https://github.com/project-trans/vitepress-theme-project-trans/commit/783ca6ed300fcefd8628430816922fdc88e3f183)
+1. feat: 添加自定义 head 支持 [#17](https://github.com/project-trans/vitepress-theme-project-trans/pull/17)
